--- a/CppDashboard/CppDashboard.csproj
+++ b/CppDashboard/CppDashboard.csproj
@@ -291,6 +291,9 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="Content\vex-theme-default.css" />
+    <Content Include="Content\vex-theme-os.css" />
+    <Content Include="Content\vex.css" />
     <Content Include="DataProvider\sql\SystemErrorSummary.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -334,6 +337,7 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\vex.combined.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
