--- a/CppDashboard/packages.config
+++ b/CppDashboard/packages.config
@@ -4,9 +4,12 @@
   <package id="Dapper" version="1.42" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="2.2.6" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
+  <package id="lodash" version="3.10.1" targetFramework="net45" />
+  <package id="lodash.TypeScript.DefinitelyTyped" version="0.6.9" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.2" targetFramework="net45" />
